force-app/main/default/objects/tdc_tsw__SMS_Logs__c/fields/tdc_tsw__Description__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>