force-app/main/default/objects/tdc_tsw__SMS_Logs__c/fields/tdc_tsw__MethodName__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__MethodName__c</fullName>
    <label>MethodName</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>