force-app/main/default/objects/tdc_tsw__SMS_Logs__c/fields/tdc_tsw__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>